@@ -1,0 +1,2 @@
+[mysql]
+username=root
